tests/neg/infer-fun-res2.stk
fun g(x: Int) =                             // error
  if x 0 == then 1 else x f1 x 1 - g +

fun f1(x: Int) = x f2

fun f2(x: Int) = x f3

fun f3(x: Int) = x g

fun check1(x: Int): Bool = x f1
fun check2(x: Int): Bool = x f2
fun check3(x: Int): Bool = x f3

fun q(x: Int) =
  if 0 x == then { a = 1 }
  else {
    a = x,
    b = 1 (x 1 - q).c +       // error
  }

fun test2(x: Int): { a: Int } =
  10 q

fun h(x: Int) =
  if 0 x == then
    { a = 1 (x 1 - h).c + }   // error
  else {
    a = x,
    b = x x +
  }
